--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,3 +1,13 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer components{
+    .link{
+        @apply cursor-pointer hover:underline;
+    }
+}
+
+.button{
+    @apply p-2 text-xs md:text-sm  bg-gradient-to-b from-purple-900 to-purple-700 border border-purple-700 rounded-sm focus:outline-none focus:ring-2 focus:ring-purple-700 active:from-purple-900
+}
