--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -9,5 +9,5 @@
 }
 
 .button{
-    @apply p-2 text-xs md:text-sm  bg-gradient-to-b from-purple-900 to-purple-700 border border-purple-700 rounded-sm focus:outline-none focus:ring-2 focus:ring-purple-700 active:from-purple-900
+    @apply p-2 text-xs md:text-sm  bg-gradient-to-b from-green-500 to-green-900 border border-green-900 rounded-sm focus:outline-none focus:ring-2 focus:ring-green-700 active:to-green-100
 }
